crates/picea/tests/ui/math_legacy_api/legacy_vector_operators.stderr
error[E0600]: cannot apply unary operator `!` to type `picea::prelude::Vector`
 --> tests/ui/math_legacy_api/legacy_vector_operators.rs:7:13
  |
7 |     let _ = !lhs;
  |             ^^^^ cannot apply unary operator `!`
  |
note: `picea::prelude::Vector` does not implement `Not`
 --> src/math/vector.rs
  |
  | pub struct Vector {
  | ^^^^^^^^^^^^^^^^^ `picea::prelude::Vector` is defined in another crate

error[E0369]: no implementation for `picea::prelude::Vector ^ picea::prelude::Vector`
 --> tests/ui/math_legacy_api/legacy_vector_operators.rs:8:17
  |
8 |     let _ = lhs ^ rhs;
  |             --- ^ --- picea::prelude::Vector
  |             |
  |             picea::prelude::Vector
  |
note: `picea::prelude::Vector` does not implement `BitXor`
 --> src/math/vector.rs
  |
  | pub struct Vector {
  | ^^^^^^^^^^^^^^^^^ `picea::prelude::Vector` is defined in another crate

error[E0369]: no implementation for `picea::prelude::Vector >> picea::prelude::Vector`
 --> tests/ui/math_legacy_api/legacy_vector_operators.rs:9:17
  |
9 |     let _ = lhs >> rhs;
  |             --- ^^ --- picea::prelude::Vector
  |             |
  |             picea::prelude::Vector
  |
note: `picea::prelude::Vector` does not implement `Shr`
 --> src/math/vector.rs
  |
  | pub struct Vector {
  | ^^^^^^^^^^^^^^^^^ `picea::prelude::Vector` is defined in another crate
